# self-hosted-runner-provisioner-azure

./: .funcignore  .gitattributes  .gitignore  README.md  cloud_init.sh.jinja  function_app.py  requirements.txt  vm_template.json
cli/: pyproject.toml
cli/azure_runner_provisioner_cli/: set_up_pre_job_script.py  tag_resource_group.py
